result.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  namespace: default
  labels:
    app: result
    component: application
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
        component: application
        version: v1
    spec:
      containers:
        - name: result
          image: epitechcontent/t-dop-600-result:k8s
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "128Mi"
      restartPolicy: Always
