result.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  namespace: default
  labels:
    app: result
    component: application
    version: v1
spec:
  selector:
    app: result
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
