traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-public
  labels:
    app: traefik
spec:
  type: NodePort
  ports:
  - port: 80
    name: web
    targetPort: 80
    nodePort: 30021
  - port: 8080
    name: admin
    targetPort: 8080
    nodePort: 30042
  selector:
    app: traefik
